--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <% include ./particles/head.ejs %>
   </head>
   <body>
     <nav>
       <div class="nav-wrapper">
-        <a href="/home" class="brand-logo left">XobproD</a>
+        <a href="/" class="brand-logo left">XobproD</a>
       </div>
     </nav>
 
@@ -42,11 +42,10 @@
         </div>
 
         <div class="center-align">
-          <input
-            class="waves-effect waves-light btn"
-            type="submit"
-            value="Login"
-          />
+          <a href="/home">
+            <button class="waves-effect waves-light btn" 
+            type="button"> Login </button>
+          </a>
         </div>
 
         <div class="center-align">
