--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <% include ./particles/head.ejs %>
   </head>
   <body>
     <nav>
       <div class="nav-wrapper">
-        <a href="/home" class="brand-logo left">XobproD</a>
+        <a href="/" class="brand-logo left">XobproD</a>
       </div>
     </nav>
     <section class="row z-depth-3 register">
