--- a/views/particles/base.ejs
+++ b/views/particles/base.ejs
@@ -3,20 +3,22 @@
   <body>
     <nav>
       <div class="nav-wrapper">
-        <a href="/home" class="brand-logo right">XobproD</a>
+        <a href="/home" class="brand-logo left home">XobproD</a>
         <a
           href="#"
           data-target="slide-out"
           class="show-on-large sidenav-trigger"
-          ><i class="material-icons">menu</i></a
-        >
+          ><i class="material-icons">menu</i>
+          </a>
+        <img src="https://i.imgur.com/W0oIDcS.png" class="brand-logo right">
       </div>
     </nav>
-
     <ul id="slide-out" class="sidenav menu">
       <li>
         <div class="user-view">
-          <span class="dot"></span>
+          <div class="dot">
+            <img src="https://i.imgur.com/W0oIDcS.png">
+          </div>
           <li>
             <a href="#name"><span class="white-text name">Name User</span></a>
           </li>
