Modelo da Home criado

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,115 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <% include ./particles/base.ejs %>
-    </head>
+
+<head>
+    <% include ./particles/base.ejs %>
+</head>
+
+<body>
+    <div class="container">
+
+        <div class="row">
+
+            <div class="col m5">
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator"
+                            src="https://m.media-amazon.com/images/M/MV5BMDJiNzUwYzEtNmQ2Yy00NWE4LWEwNzctM2M0MjE0OGUxZTA3XkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SY1000_CR0,0,675,1000_AL_.jpg">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Extraction<i
+                                class="material-icons right">more_vert</i></span>
+                        <p><a href="https://www.imdb.com/title/tt8936646/?ref_=hm_fanfav_tt_1_pd_fp1">IMDB</a></p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Extraction<i
+                                class="material-icons right">close</i></span>
+                        <p>Ano de Lançamento: 2020</p>
+                        <p>Classificação Hetária: R</p>
+                        <p>Duração: 1h 56min</p>
+                        <p>Gênero: Action</p>
+                        <p>Data/Local de lançamento: 24 April 2020 (USA) </p>
+                        <p>Tamanho: 1.00 GB </p>
+                        <button class="waves-effect waves-light btn" type="button"> Play </button>
+                    </div>
+                </div>
+            </div>
+            
+            
+            <div class="col m5">
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator"
+                        src="https://m.media-amazon.com/images/M/MV5BYWZjMjk3ZTItODQ2ZC00NTY5LWE0ZDYtZTI3MjcwN2Q5NTVkXkEyXkFqcGdeQXVyODk4OTc3MTY@._V1_SY1000_CR0,0,674,1000_AL_.jpg">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Parasite<i
+                            class="material-icons right">more_vert</i></span>
+                            <p><a href="https://www.imdb.com/title/tt6751668/?ref_=hm_fanfav_tt_2_pd_fp1">IMDB</a></p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Parasite<i
+                            class="material-icons right">close</i></span>
+                            <p>Ano de Lançamento: 2019</p>
+                            <p>Classificação Hetária: R</p>
+                            <p>Duração: 2h 12min</p>
+                            <p>Gênero: Comedy, Drama, Thriller</p>
+                            <p>Data/Local de lançamento: 8 November 2019 (USA)</p>
+                            <p>Tamanho: 1.00 GB </p>
+                            <button class="waves-effect waves-light btn" type="button"> Play </button>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="col m5">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator"
+                            src="https://lastfm.freetls.fastly.net/i/u/770x0/9fd718d4c80e4ac89107c6c0bb908440.webp#9fd718d4c80e4ac89107c6c0bb908440">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Daft Punk<i
+                                class="material-icons right">more_vert</i></span>
+                                <p><a href="https://www.youtube.com/watch?v=FGBhQbmPwH8">Clip no Youtube</a></p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Daft Punk - One More Time<i
+                                class="material-icons right">close</i></span>
+                        <p>Single: One More Time</p>
+                        <p>Ano de Lançamento: 2000</p>
+                        <p>Duração: 5:20</p>
+                        <p>Gênero: House</p>
+                        <p>Álbum: Discovery</p>
+                        <p>Data/Local de lançamento: 8 November 2019 (USA)</p>
+                        <p>Tamanho: 100 MB </p>
+                        <button class="waves-effect waves-light btn" type="button"> Play </button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col m5">
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator"
+                        src="https://live.staticflickr.com/2280/2099447856_d103404620_b.jpg">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Foto<i
+                            class="material-icons right">more_vert</i></span>
+                </div>
+                <div class="card-reveal">
+                    <span class="card-title grey-text text-darken-4">Foto<i
+                            class="material-icons right">close</i></span>
+                    <p>Descrição: Foto caminhada no parque</p>
+                    <button class="waves-effect waves-light btn" type="button"> View </button>
+                </div>
+            </div>
+        </div>
+        
+        </div>
+
+    </div>
+
+</body>
+
 </html>
