--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -10,6 +10,7 @@
       </div>
     </nav>
     <section class="row z-depth-3 register">
+      <% include ./particles/message.ejs %>
       <h4 class="center-align">Register</h4>
       <form method="post" action="/register" class="row">
         <div class="row">
