--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -34,6 +34,9 @@ nav .brand-logo.right {
   color: #fffafa;
 }
 
+.imgnav {
+  height: -webkit-fill-available;
+}
 .dot img{
   height: 190px;
   width: 190px;
@@ -121,4 +124,12 @@ div.center-align {
 
 .material-icons {
   color: #fffafa;
+}
+
+.row .col.m6 {
+  width: 25%;
+  margin-left: 33%;
+  left: 100%;
+  right: auto;
+  align-content: center;
 }
