--- a/app/views/search.ejs
+++ b/app/views/search.ejs
@@ -7,7 +7,7 @@
   <body>
     <section class="row z-depth-3 login">
       <h4 class="center-align">Pesquisa de Mídia</h4>
-      <form method="POST" action="/search/media" class="row">
+      <form method="POST" action="/media/search" class="row">
         <div class="row">
           <div class="input-field col s4">
             <i class="material-icons prefix">title</i>
