--- a/app/views/particles/head.ejs
+++ b/app/views/particles/head.ejs
@@ -7,3 +7,4 @@
 />
 <link href="/css/materialize.css" type="text/css" rel="stylesheet" />
 <link href="/css/style.css" type="text/css" rel="stylesheet" />
+<link href="/css/materialize-stepper.css" type="text/css" rel="stylesheet" />
