--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -49,6 +49,7 @@ nav .brand-logo.right {
   background-color: #2e2d2d;
   max-width: 50%;
 }
+
 .register {
   background-color: #2e2d2d;
   max-width: 50%;
@@ -140,4 +141,16 @@ video {
   bottom: 0;
   min-width: 100%;
   min-height: 100%;
+}
+
+#stepActions {
+  background-color: #212121;
+}
+
+.modal-content {
+  background-color: #212121;
+}
+
+.step-title {
+  color: #fffafa;
 }
