--- a/app/views/particles/base.ejs
+++ b/app/views/particles/base.ejs
@@ -25,49 +25,30 @@
         </div>
     <li>
       <a href="#name"><span class="white-text name">Name User</span></a>
-    </li>
-    </div>
-    </li>
     <li><a href="/register">New user</a></li>
   </ul>
 
-  <div id="upload" class="modal">
-    <div class="modal-content">
-      <h4>Faça o upload dos seus arquivos aqui!</h4>
-      <p>
-      <form method="POST" action="/users/home" enctype="multipart/form-data">
-        <div class="file-field input-field">
-          <div class="btn">
-            <span>File</span>
-            <input type="file" name="file" multiple>
-          </div>
-          <div class="file-path-wrapper">
-            <input class="file-path validate" type="text" placeholder="Envie um ou mais arquivos">
-          </div>
-          <input type="submit" class="btn btn-default" id="btnSubmit"></input>
-        </div>
-      </form>
-      </p>
-    </div>
-    <div class="modal-footer">
-      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Fechar</a>
-    </div>
-  </div>
+  <% include ./upload.ejs %>
 
   <% if(typeof message != 'undefined'){ %> <% message.forEach(function(message) { %>
-    <div class="row center">
-      <div class="col s12 m6">
-        <div class="card blue-grey darken-1">
-          <div class="card-content white-text">
-            <span class="card-title">Upload - Status</span>
-            <p><%= message.msg %></p>
-          </div>
+  <div class="row center">
+    <div class="col s12 m6">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title">Upload - Status</span>
+          <p><%= message.msg %></p>
         </div>
       </div>
     </div>
-    <% }); %> <% } %>
+  </div>
+  <% }); %> <% } %>
 
   <%- include ./importScript.ejs%>
+  <script>
+    $(document).ready(function () {
+      $("select").formSelect();
+    });
+  </script>
 </body>
 
 </html>
