--- a/app/views/particles/importScript.ejs
+++ b/app/views/particles/importScript.ejs
@@ -1,3 +1,4 @@
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="/js/materialize.js"></script>
 <script src="/js/init.js"></script>
+<script src="/js/upload.js"></script>
