--- a/app/views/cards/search/movie.ejs
+++ b/app/views/cards/search/movie.ejs
@@ -1,40 +1,54 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-
-<head>
-  <%- include('../../particles/base') %>
-</head>
-
-<body>
-  <div id="container" class="container">
+<div id="main_container" class="container">
+  <form id="form_upload" method="POST" action="/users/home" enctype="multipart/form-data">
     <div class="row">
-      <% for(let i = 0; i < result.length; i++) { %>
-      <div class="col m4">
-        <div class="card">
-          <div class="card-image waves-effect waves-block waves-light">
-            <img class="activator" src=<%="https://image.tmdb.org/t/p/w500" + result[i].poster_path %>>
-          </div>
-          <div class="card-content">
-            <span class="card-title activator grey-text text-darken-4"><%= result[i].title %><i
-                class="material-icons right">more_vert</i></span>
-            <p><%= result[i].overview %></p>
-          </div>
-          <div class="card-reveal">
-            <span class="card-title grey-text text-darken-4"><%= result[i].title %><i
-                class="material-icons right">close</i></span>
-            <p><strong>Popularidade:</strong> <%=result[i].popularity.toFixed(1) %></p>
-            <p><strong>Adulto:</strong> <%= result[i].adult ? "Sim" : "Não"%></p>
-            <p><strong>Idioma Original:</strong> <%=result[i].original_language %></p>
-            <p><strong>Título Original:</strong> <%=result[i].original_title %></p>
-            <p><strong>Avaliação:</strong> <%= result[i].vote_average %></p>
-            <p><strong>Data de Lançamento:</strong> <%= new Date(result[i].release_date).toLocaleDateString() %></p>
-            <button class="waves-effect waves-light btn" type="button">Escolher</button>
-          </div>
+      <div class="file-field input-field col s6">
+        <div class="btn">
+          <i class="material-icons left">insert_drive_file</i>
+          <span>Arquivo</span>
+          <input id="fileMedia" name="file" type="file" multiple="">
+        </div>
+        <div class="file-path-wrapper">
+          <input class="file-path validate" type="text" placeholder="Envie um ou mais arquivos">
         </div>
       </div>
-      <% }%>
+      <input id="idTMDB" name="idTMDB" type="hidden">
+      <input id="typeMedia" name="typeMedia" type="hidden" value="movie">
+      <div class="center-align">
+        <button id="btn_submit" type="submit" class="btn waves-effect waves-light">Upload
+          <i class="material-icons right">file_upload</i>
+        </button>
+      </div>
     </div>
-  </div>
-</body>
+  </form>
+</div>
 
-</html>
+<div id="media_container" class="container">
+  <div class="row">
+    <% for(let i = 0; i < result.length; i++) { %>
+    <div class="col m4">
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <img class="activator" src=<%="https://image.tmdb.org/t/p/w500" + result[i].poster_path %>>
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4"><%= result[i].title %><i
+              class="material-icons right">more_vert</i></span>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4"><%= result[i].title %><i
+              class="material-icons right">close</i></span>
+          <p><strong>Popularidade:</strong> <%=result[i].popularity.toFixed(1) %></p>
+          <p><strong>Adulto:</strong> <%= result[i].adult ? "Sim" : "Não"%></p>
+          <p><strong>Idioma Original:</strong> <%=result[i].original_language %></p>
+          <p><strong>Título Original:</strong> <%=result[i].original_title %></p>
+          <p><strong>Sinópse:</strong> <%= result[i].overview %></p>
+          <p><strong>Avaliação:</strong> <%= result[i].vote_average %></p>
+          <p><strong>Data de Lançamento:</strong> <%= new Date(result[i].release_date).toLocaleDateString() %></p>
+          <button class="waves-effect waves-light btn" type="button"
+            onclick=<%="chooseMedia(" + result[i].id + ")" %>>Escolher</button>
+        </div>
+      </div>
+    </div>
+    <% }%>
+  </div>
+</div>
