Fix msg - register

--- a/app/views/particles/message.ejs
+++ b/app/views/particles/message.ejs
@@ -4,4 +4,10 @@
     <%= error.msg %>
   </div>
 </div>
-<% }); %> <% } %>
+<% }); %> <% } %> <% if(typeof successe != 'undefined'){ %>
+<div class="card green lighten-5">
+  <div class="card-content green-text">
+    <%= successe %>
+  </div>
+</div>
+<% } %>
