--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -6,11 +6,12 @@
 </head>
 
 <body>
-  <% if (result !== null) { %>
+  <br>
+  <% if (result) { %>
   <div id="container" class="container">
     <div class="row">
       <% for(let i = 0; i < result.files.length; i++) { %>
-        <div class="col m4">
+      <div class="col m3">
         <div class="card">
           <% if (result.files[i].tag === 'movie') {  %>
           <%- include('cards/home/movie', {file: result.files[i], fileTMDB: result.TMDB[i], idFile: result.files[i].id}) %>
@@ -21,7 +22,7 @@
           <% }; %>
         </div>
       </div>
-        <% }; %>
+      <% }; %>
     </div>
   </div>
   <% }; %>
