Add router - logout

--- a/app/views/particles/base.ejs
+++ b/app/views/particles/base.ejs
@@ -26,6 +26,7 @@
     <li>
       <a href="#name"><span class="white-text name">Name User</span></a>
     <li><a href="/register">New user</a></li>
+    <li><a href="/logout">Logout</a></li>
   </ul>
 
   <% if(typeof message != 'undefined'){ %> <% message.forEach(function(message) { %>
