Add Route - Delete user

--- a/app/views/particles/message.ejs
+++ b/app/views/particles/message.ejs
@@ -4,7 +4,8 @@
     <%= error.msg %>
   </div>
 </div>
-<% }); %> <% } %> <% if(typeof successe != 'undefined'){ %>
+<% }); %> <% } %>
+<% if(typeof successe != 'undefined'){ %>
 <div class="card green lighten-5">
   <div class="card-content green-text">
     <%= successe %>
