--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -17,13 +17,10 @@
         <h5 class="center-align">Faça aqui o upload de suas fotos e vídeos!</h5>
       </div>
       <div class="center-align">
-        <a href="/register">
-          <button class="waves-effect waves-light btn" 
-          type="button"> Cadastre-se </button>
-        </a>
         <a href="/login">
-          <button class="waves-effect waves-light btn" 
-          type="button"> Login </button>
+          <button class="waves-effect waves-light btn" type="button">
+            Login
+          </button>
         </a>
       </div>
     </section>
