--- a/app/views/update.ejs
+++ b/app/views/update.ejs
@@ -11,7 +11,7 @@
     </nav>
     <section class="row z-depth-3 register">
       <% include ./particles/message.ejs %>
-      <h4 class="center-align">Register</h4>
+      <h4 class="center-align">Update</h4>
       <form method="post" action="/register" class="row">
         <div class="row">
           <div class="input-field col s12">
