--- a/app/views/cards/home/tv.ejs
+++ b/app/views/cards/home/tv.ejs
@@ -31,5 +31,6 @@
     <div class="row">
         <a class="waves-effect waves-light btn" href=<%= "http://localhost:3000/media/stream/" + file.id %>>Exibir</a>
         <a class="waves-effect waves-light btn" href=<%= "http://localhost:3000/media/download/" + file.id %>>Download</a>
+        <a class="waves-effect waves-light btn" href=<%= "http://localhost:3000/media/delete/" + file.id %>>Remover</a>
     </div>
 </div>
