--- a/app/views/particles/base.ejs
+++ b/app/views/particles/base.ejs
@@ -8,9 +8,9 @@
         <i class="material-icons">menu</i>
       </a>
       <ul class="right hide-on-med-and-down">
-        <li><a nohref><i class="material-icons">search</i></a></li>
-        <li><a nohref><i class="material-icons">view_module</i></a></li>
-        <li><a nohref><i class="material-icons">refresh</i></a></li>
+        <!-- <li><a nohref><i class="material-icons">search</i></a></li> -->
+        <!-- <li><a nohref><i class="material-icons">view_module</i></a></li> -->
+        <li><a href='/users/home'><i class="material-icons">refresh</i></a></li>
         <li><a class="modal-trigger" href="/users/upload"><i class="material-icons">cloud_upload</i></a></li>
         <li><img class="imgnav" src="https://i.imgur.com/W0oIDcS.png"></li>
       </ul>
@@ -24,7 +24,7 @@
           <img src="https://i.imgur.com/W0oIDcS.png">
         </div>
     <li>
-      <a href="#name"><span class="white-text name">Name User</span></a>
+      <!-- <a href="#name"><span class="white-text name">Name User</span></a> -->
     <li><a href="/register">New user</a></li>
     <li><a href="/users">Users</a></li>
     <li><a href="/logout">Logout</a></li>
