--- a/app/views/cards/search/form.ejs
+++ b/app/views/cards/search/form.ejs
@@ -14,7 +14,7 @@
         <input id="idTMDB" name="idTMDB" type="hidden">
         <input id="typeMedia" name="typeMedia" type="hidden" value=<%= media %>>
         <div class="center-align">
-          <button id="btn_submit" type="submit" class="btn waves-effect waves-light">Upload
+          <button id="btn_submit_card" type="submit" class="btn waves-effect waves-light" disabled>Upload
             <i class="material-icons right">file_upload</i>
           </button>
         </div>
